--- a/src/app/pokemon-search/pokemon-search.page.html
+++ b/src/app/pokemon-search/pokemon-search.page.html
@@ -145,11 +145,15 @@
       <ion-row class="ion-justify-content-center">
         <ion-col sizeMd="auto">
           <ion-card class="cardDefault">
-            <img
-              style="border-bottom: 1px solid"
-              alt="Silhouette of mountains"
-              src="../../assets/img/spriteNull.png"
-            />
+            <div style="display: flex; justify-content: center; align-items: center;">
+              <img
+                style="border-bottom: 1px solid"
+                height="100px"
+                width="100px"
+                alt="???"
+                src="../../assets/img/spriteNull.png"
+              />
+            </div>
             <ion-card-header>
               <ion-card-title>???</ion-card-title>
               <ion-card-subtitle>??????????</ion-card-subtitle>
