--- a/src/app/stats-comparison/stats-comparison.page.scss
+++ b/src/app/stats-comparison/stats-comparison.page.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 80%;
+  height: 90%;
 
   transform: rotateY(0deg) rotateX(5deg) translateX(0%) translateZ(0px);
   animation-name: example;
@@ -14,8 +14,16 @@
   90% { transform: rotateY(0deg) rotateX(5deg) translateX(0%) translateZ(10px); }
   100% { transform: rotateY(0deg) rotateX(0deg) translateX(0%) translateZ(5px); }
 }
-
+.polar-grap{
+  height: 450px;
+  padding-inline: 20px;
+  margin: 0 auto;
+}
 //types pokemon
+.typePokemon{
+  border: 1px solid #000000;
+  border-radius: 10px;
+}
 
 .icon {
   border-radius: 100%;
