--- a/src/app/stats-comparison/stats-comparison.page.html
+++ b/src/app/stats-comparison/stats-comparison.page.html
@@ -4,7 +4,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <h6>Pokedex</h6>
+      <h6>Comparación De Estadísticas</h6>
       <ion-toggle
         slot="end"
         mode="ios"
